--- a/main.css
+++ b/main.css
@@ -348,7 +348,6 @@ input:focus {
 
 #brandDropdown {
     display: none;
-    height: 300px;
     padding: 5px 0 0 15px;
 }
 
@@ -364,6 +363,10 @@ input:focus {
     background-color: cornflowerblue;
     color: white;
     font-weight: bolder;
+}
+
+b[display="block"] {
+    display: block;
 }
 
 input[type='time'] {
