--- a/main.css
+++ b/main.css
@@ -1,19 +1,7 @@
+/* Everything */
 * {
     box-sizing: border-box;
     font-family: Montserrat, sans-serif;
-}
-
-/* Create 4 equal columns that floats next to each other */
-.column {
-    float: left;
-    width: 25%;
-    padding: 10px;
-}
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
 }
 
 a {
@@ -21,7 +9,129 @@ a {
     font-weight: bolder;
     text-underline-mode: true;
 }
+p {
+    margin: 0 0 0 0;
+    padding: 0 8px 0 8px;
+}
+h3 {
+    margin: 16px 0 5px 0
+}
+select {
+    margin-left: 8px;
+    margin-right: 5px;
+    cursor: pointer;
+    transition: .2s;
+}
+label {
+    padding-right: 5px;
+}
 
+/* ALl inputs */
+input {
+    height: 30px;
+    font-weight: bold;
+    margin: 4px 10px 4px 10px;
+    box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
+    -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
+    -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
+    transition: .2s ease-in-out;
+    outline: none;
+    padding: 2px 10px 2px 10px;
+    border-width: 3px;
+    border-radius: 30px;
+    border-style: solid;
+    border-color: darkgreen;
+    font-size: 14px;
+    background: #ffffff;
+}
+input[type='checkbox'] {
+    display: none;
+}
+input:focus {
+    scale: 1.05;
+    transition: .2s ease-in-out;
+}
+
+span.material-symbols-outlined[id*='warning'] {
+    color: orange;
+    transition: .2s;
+    border-radius: 50%;
+}
+
+button[id*='clear'], button[id*='Clear'] {
+    height: 25px;
+    width: 60px;
+    font-size: 12px;
+    margin: 0 10px 0 14px;
+    border-radius: 13px;
+    background: linear-gradient(145deg, #f0f0f0, #fff078);
+    box-shadow:  5px 5px 10px #acacac,
+    -5px -5px 10px #ffffff;
+    transition: .1s;
+    border: #262626;
+    position: absolute;
+    right: 0;
+}
+button[id*='clear']:hover, button[id*='Clear']:hover {
+    height: 25px;
+    width: 60px;
+    font-size: 12px;
+    margin: 0 10px 0 14px;
+    border-radius: 13px;
+    background: #faec7a;
+    box-shadow:  5px 5px 10px #acacac,
+    -5px -5px 10px #ffffff;
+    transition: .1s;
+    scale: 1.05;
+    border: #262626;
+    position: absolute;
+    right: 0;
+}
+
+
+.tabs {
+    margin-top: 65px;
+}
+.tab {
+    padding: 8px 14px 8px 14px;
+    border-radius: 11px;
+    background: linear-gradient(145deg, #f0f0f0, #e3e3e3);
+    box-shadow:  5px 5px 12px #b5b5b5,
+    -5px -5px 12px #ffffff;
+    border: transparent;
+    margin: 0 5px 0 5px;
+    transition: .25s;
+}
+.tab[value=''] {
+    padding: 0 0 0 0;
+}
+.tab:hover {
+    background: linear-gradient(145deg, #d9d9d9, #f0f0f0);
+    box-shadow:  5px 5px 12px #808080,
+    -5px -5px 12px #ffffff;
+    transition: .25s;
+}
+.tab:active {
+
+}
+
+/* Columns & Rows */
+.column3 {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+}
+.column4 {
+    float: left;
+    width: 25%;
+    padding: 10px;
+}
+.row:after {
+    display: table;
+    clear: both;
+}
+
+/* Shortcut 'click link to add brand variable' in the 'New Content' section */
 #linkLocation {
     transition: .1s;
 }
@@ -47,43 +157,7 @@ a {
     transition: .1s;
 }
 
-p {
-    margin: 0 0 0 0;
-}
-
-input {
-    height: 30px;
-    font-weight: bold;
-    padding: 0 10px 0 10px;
-    margin: 4px 10px 4px 10px;
-    box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
-    -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
-    -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
-    border: none;
-    transition: .2s ease-in-out;
-    outline: none;
-}
-
-input:focus {
-    scale: 1.05;
-    transition: .2s ease-in-out;
-}
-
-#postSupport {
-    width: 100%;
-    height: 100%;
-    background-color: #1da1f2;
-}
-#mentionsSupport {
-    word-wrap: break-word;
-}
-#hashtagsSupport {
-    word-wrap: break-word;
-}
-#emojisSupport {
-    word-wrap: break-word;
-}
-
+/* Images produced in the 'New Content' tab */
 #finalImageHorizontal {
     width: 450px;
     height: 240px;
@@ -127,6 +201,7 @@ input:focus {
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
 }
 
+/* Social media platform icons under the images */
 #finalImageVerticalPlatforms {
     position: absolute;
     right: 170px;
@@ -158,6 +233,7 @@ input:focus {
     height: 25px;
 }
 
+/* Text in the images of the 'New Content' tab */
 #finalTitleHorizontal {
     font-size: 30px;
     font-weight: bolder;
@@ -238,6 +314,7 @@ input:focus {
     word-wrap: break-word;
 }
 
+/* Reveal items in the images as they hold a value in the inputs section in 'New Content' */
 .showOnDate {
     display: none;
 }
@@ -266,68 +343,29 @@ input:focus {
     display: none;
 }
 
+/* Positioning the square logos in the images in the 'New Content' tab */
 #squareImageLogoHere, #verticalImageLogoHere {
     position: absolute;
     bottom: 4px;
     right: 5px;
 }
-
 #horizontalImageLogoHere {
     position: absolute;
     bottom: 4px;
     left: 5px;
 }
 
-#facebookPost {
-    height: 240px;
-    width: 456px;
-    background-color: cornflowerblue;
-    display: none;
+/* Top Nav Bar */
+#brandSearch {
+    margin: 0 0 0 50px
 }
-#instagramPost {
-    height: 406px;
-    width: 325px;
-    background-color: #b941e5;
-    display: none;
-}
-#linkedinPost {
-    height: 240px;
-    width: 456px;
-    background-color: #0e76a8;
-    display: none;
-}
-#twitterPost {
-    height: 240px;
-    width: 456px;
-    background-color: #1da1f2;
-    display: none;
-}
-
-
-
-
-
-
-* {
-    font-family: Montserrat, sans-serif;
-    font-weight: bold;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-#clearPrimaryContactPhone {
-    alignment: left;
-}
-
 #searchBar {
     position: fixed;
     top: 0;
     background-color: #f1f1f1;
     width: 100%;
     margin-left: -12px;
-    padding: 8px 8px 8px 8px;
+    padding: 10px 8px 10px 8px;
     align-items: center;
     z-index: 1000;
     box-shadow: 5px 10px #888888;
@@ -337,10 +375,9 @@ input:focus {
 
 #logoIcon {
     position: absolute;
-    top: 10px;
-    left: 225px;
-    width: 30px;
-    height: 30px;
+    top: 8px;
+    width: 38px;
+    height: 38px;
 }
 #logoIcon:hover {
     cursor: pointer;
@@ -357,7 +394,6 @@ input:focus {
     padding: 4px 12px 4px 12px;
     margin: 4px auto;
 }
-
 .draggableBrandVar:hover {
     cursor: pointer;
     background-color: cornflowerblue;
@@ -369,6 +405,7 @@ b[display="block"] {
     display: block;
 }
 
+
 pre code {
     background-color: #424242;
     border: 3px solid #282828;
@@ -377,7 +414,6 @@ pre code {
     display: block;
     padding: 15px;
 }
-
 
 
 .integration {
@@ -395,73 +431,10 @@ pre code {
     position: relative;
     background-color: #fff;
 }
-
 #connectToInstagramButton, #connectToYoutubeButton {
     box-shadow: 5px 10px #888888;
     -webkit-box-shadow: 0 0 15px -9px rgba(0,0,0,0.90);
     -moz-box-shadow: 0 0 15px -9px rgba(0,0,0,0.90);
-}
-
-.tabs {
-    margin-top: 65px;
-}
-
-.tab {
-    padding: 8px 14px 8px 14px;
-    border-radius: 11px;
-    background: linear-gradient(145deg, #f0f0f0, #e3e3e3);
-    box-shadow:  5px 5px 12px #b5b5b5,
-    -5px -5px 12px #ffffff;
-    border: transparent;
-    margin: 0 5px 0 5px;
-    transition: .25s;
-}
-
-.tab[value=''] {
-    padding: 0 0 0 0;
-}
-
-.tab:hover {
-    background: linear-gradient(145deg, #d9d9d9, #f0f0f0);
-    box-shadow:  5px 5px 12px #808080,
-    -5px -5px 12px #ffffff;
-    transition: .25s;
-}
-
-.tab:active {
-
-}
-
-.column {
-    float: left;
-    width: 33.33%;
-    padding: 10px;
-}
-
-#facebookPreview {
-
-}
-
-#instagramPreview {
-
-}
-
-#linkedinPreview {
-
-}
-
-#twitterPreview {
-
-}
-
-/* Clear floats after the columns */
-.row:after {
-    display: table;
-    clear: both;
-}
-
-input[type='checkbox'] {
-    display: none;
 }
 
 .wrap-collabsible {
@@ -482,12 +455,10 @@ input[type='checkbox'] {
     border-radius: 50px;
     transition: 0.1s;
 }
-
 .lbl-toggle:hover {
     color: #FFF;
     background: #232323;
 }
-
 .lbl-toggle::before {
     content: ' ';
     display: inline-block;
@@ -498,30 +469,42 @@ input[type='checkbox'] {
     margin-right: .7rem;
     transition: .1s;
 }
-
 .toggle:checked+.lbl-toggle::before {
     transform: rotate(90deg) translateX(-3px);
 }
-
 .collapsible-content {
     max-height: 0;
     overflow: hidden;
     transition: .1s;
 }
-
 .toggle:checked+.lbl-toggle {
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
 }
-
 .toggle:checked + .lbl-toggle + .collapsible-content {
     max-height: 10000px;
 }
-
 .collapsible-content .content-inner {
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
     padding: .5rem 1rem;
+}
+.collapsible {
+    background-color: white;
+    color: #252525;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    outline: none;
+    font-size: 18px;
+    border-radius: 40px;
+    transition: .2s;
+}
+.active, .collapsible:hover {
+    background-color: #d2d2d2;
+    cursor: pointer;
+    transition: .2s;
 }
 
 /* Lock Styling */
@@ -534,7 +517,6 @@ input[type='checkbox'] {
     cursor: pointer;
     transition: .1s;
 }
-
 .material-symbols-outlined:hover {
     scale: 1.10;
     transition: .1s;
@@ -543,7 +525,6 @@ input[type='checkbox'] {
 .varGroup {
     padding: 10px 25px 10px 25px;
 }
-
 .var {
     display: flex;
     padding: 10px 10px 10px 10px;
@@ -559,150 +540,16 @@ input[type='checkbox'] {
     position: relative;
     background-color: #fff;
 }
-
-
 .var:hover {
     scale: 1.01;
     transition: .1s;
     background-color: #ececec;
 }
 
-h3 {
-    margin: 16px 0 5px 0
-}
-
-p {
-    margin: 0 0 0 0;
-    padding: 0 8px 0 8px;
-}
-
-span.material-symbols-outlined[id*='warning'] {
-    color: orange;
-    transition: .2s;
-    border-radius: 50%;
-}
-
-span.material-symbols-outlined[id*='warning'] {
-}
-
-button[id*='clear'] {
-    height: 25px;
-    width: 60px;
-    font-size: 12px;
-    margin: 0 10px 0 14px;
-    border-radius: 13px;
-    background: linear-gradient(145deg, #f0f0f0, #fff078);
-    box-shadow:  5px 5px 10px #acacac,
-    -5px -5px 10px #ffffff;
-    transition: .1s;
-    border: #262626;
-    position: absolute;
-    right: 0;
-}
-
-button[id*='clear']:hover {
-    height: 25px;
-    width: 60px;
-    font-size: 12px;
-    margin: 0 10px 0 14px;
-    border-radius: 13px;
-    background: #faec7a;
-    box-shadow:  5px 5px 10px #acacac,
-    -5px -5px 10px #ffffff;
-    transition: .1s;
-    scale: 1.05;
-    border: #262626;
-    position: absolute;
-    right: 0;
-}
-
-button[id*='Clear'] {
-    height: 25px;
-    width: 60px;
-    font-size: 12px;
-    margin: 0 10px 0 14px;
-    border-radius: 13px;
-    background: linear-gradient(145deg, #f0f0f0, #fff078);
-    box-shadow:  5px 5px 10px #acacac,
-    -5px -5px 10px #ffffff;
-    transition: .1s;
-    border: #262626;
-    position: absolute;
-    right: 0;
-}
-
-button[id*='Clear']:hover {
-    height: 25px;
-    width: 60px;
-    font-size: 12px;
-    margin: 0 10px 0 14px;
-    border-radius: 13px;
-    background: #faec7a;
-    box-shadow:  5px 5px 10px #acacac,
-    -5px -5px 10px #ffffff;
-    transition: .1s;
-    scale: 1.05;
-    border: #262626;
-    position: absolute;
-    right: 0;
-}
-
-
-input {
-    margin-left: 8px;
-    margin-right: 5px;
-    padding: 2px 10px 2px 10px;
-    border-width: 3px;
-    border-radius: 30px;
-    border-style: solid;
-    border-color: darkgreen;
-    transition: .2s;
-    font-size: 14px;
-    background: #ffffff;
-    box-shadow: inset 5px 5px 6px #e6e6e6,
-    inset -5px -5px 6px #ffffff;
-    font-weight: bold;
-
-}
-
-input:focus {
-    transition: .2s;
-}
-
-input[type='file']{
-
-}
-
 #businessTypeValueDisplay {
     font-size: 12px;
 }
 
-select {
-    margin-left: 8px;
-    margin-right: 5px;
-    cursor: pointer;
-    transition: .2s;
-}
 
-label {
-    padding-right: 5px;
-}
 
-.collapsible {
-    background-color: white;
-    color: #252525;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    text-align: left;
-    outline: none;
-    font-size: 18px;
-    border-radius: 40px;
-    transition: .2s;
-}
 
-.active, .collapsible:hover {
-    background-color: #d2d2d2;
-    cursor: pointer;
-    transition: .2s;
-}
