--- a/mySite/mySite.css
+++ b/mySite/mySite.css
@@ -1,9 +1,9 @@
 :root {
 
 	/* Colors */
-	--primaryColor: #7c1212;
-	--secondaryColor: #1b1bc0;
-	--tertiaryColor: #063b06;
+	--primaryColor: #9d2727;
+	--secondaryColor: #3e3eff;
+	--tertiaryColor: #009d00;
 
 	/* Fonts */
 	--primaryFont: Montserrat, sans-serif;
@@ -13,7 +13,12 @@
 	--primaryAttention: bold; 	/* Can be either 'bold', 'underline', 'italic', or 'highlight' */
 
 }
-
+::selection {
+	color: var(--primaryColor);
+	background-color: #fff;
+	font-weight: 700;
+	text-decoration: underline;
+}
 * {
 	font-family: var(--primaryFont);
 	font-weight: 400;
@@ -23,6 +28,14 @@
 body {
 	background-color: #f5f5f5;
 	margin: 0;
+}
+
+main {
+	padding: 0 40px 40px 40px;
+}
+
+section {
+	padding-top: 60px;
 }
 
 a {
@@ -35,7 +48,11 @@ a:hover {
 
 nav {
 	background-color: #fff;
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
+
 nav > ul {
 	list-style-type: none;
 	margin: 0;
@@ -51,7 +68,7 @@ nav > ul > li > a {
 	display: block;
 	color: #000;
 	text-align: center;
-	padding: 14px 16px;
+	padding: 15px 15px 15px 15px;
 	text-decoration: none;
 	cursor: pointer;
 	transition: .2s ease-in-out;
@@ -61,6 +78,8 @@ nav > ul > li > a:hover {
 	color: #fff;
 	transition: .2s ease-in-out;
 }
+nav > ul > li > a > img {}
+nav > ul > li > a > img:hover {}
 
 pre > code {
 	background-color: #2f2f2f;
