--- a/mySite/mySite.css
+++ b/mySite/mySite.css
@@ -1,7 +1,7 @@
 :root {
 
 	/* Colors */
-	--primaryColor: #9d2727;
+	--primaryColor: #000000;
 	--secondaryColor: #3e3eff;
 	--tertiaryColor: #009d00;
 
