--- a/main.css
+++ b/main.css
@@ -493,11 +493,13 @@ a.link {
      -webkit-box-shadow: 0 0 15px -9px rgba(70, 70, 70, 0.9);
      -moz-box-shadow: 0 0 15px -9px rgba(93, 93, 93, 0.9);
      background-color: #ffffff;
-     color: #212121;
+     color: #5d5d5d;
      padding: 5px 10px 5px 10px;
      margin: 8px 8px 8px 8px;
      border: 1px solid #c9c9c9;
      transition: .1s ease-in-out;
+     position: relative;
+     right: 5px;
  }
 
  .copyTextButton:hover {
