--- a/main.css
+++ b/main.css
@@ -50,6 +50,21 @@ a {
     font-weight: bolder;
     text-underline-mode: true;
 }
+
+a[title="Clear field"] {
+    color: #2f2f2f;
+    font-weight: bolder;
+    font-size: inherit;
+    margin-left: 5px;
+    transition: .2s ease-in-out;
+
+}
+a[title="Clear field"]:hover {
+    font-size: 1.2em;
+    transition: .2s ease-in-out;
+}
+
+
 p {
     margin: 0 0 0 0;
     padding: 0 8px 0 8px;
@@ -71,7 +86,7 @@ label {
 input {
     height: 30px;
     font-weight: bold;
-    margin: 4px 10px 4px 10px;
+    margin: 4px 5px 4px 5px;
     box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
@@ -160,7 +175,7 @@ img {
 .column3 {
     float: left;
     width: 33.33%;
-    padding: 20px 20px 20px 20px;
+    padding: 10px 10px 10px 10px;
 }
 .column4 {
     float: left;
@@ -170,6 +185,11 @@ img {
 .row:after {
     display: table;
     clear: both;
+}
+
+.socialTab:hover {
+    background-color: #1da1f2;
+    transition: .25s;
 }
 
 /* Shortcut 'click link to add brand variable' in the 'New Content' section */
@@ -200,8 +220,8 @@ img {
 
 /* Images produced in the 'New Content' tab */
 #finalImageHorizontal {
-    width: 450px;
-    height: 240px;
+    width: 330px;
+    height: 176px;
     border: 2px solid #000000;
     padding: 10px 10px 10px 10px;
     background-color: #fff;
@@ -214,22 +234,22 @@ img {
     right: 85px;
 }
 #finalImageSquare {
-    height: 350px;
-    width: 350px;
+    height: 250px;
+    width: 250px;
     border: 2px solid #000000;
     padding: 10px 10px 10px 10px;
     background-color: #fff;
-    z-index: 50;
+    z-index: 400;
     position: absolute;
-    top: 380px;
-    right: 285px;
+    top: 290px;
+    right: 225px;
     box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
 }
 #finalImageVertical {
-    height: 400px;
-    width: 300px;
+    height: 300px;
+    width: 225px;
     border: 2px solid #000000;
     padding: 10px 10px 10px 10px;
     background-color: #fff;
@@ -245,9 +265,9 @@ img {
 /* Social media platform icons under the images */
 #finalImageVerticalPlatforms {
     position: absolute;
-    right: 170px;
+    right: 120px;
     z-index: 50;
-    top: 625px;
+    top: 525px;
     align-items: center;
     font-size: 13px;
 }
@@ -256,15 +276,15 @@ img {
     align-items: center;
     margin-top: 5px;
     font-size: 13px;
-    z-index: 50;
-    top: 320px;
-    right: 430px;
+    z-index: 60;
+    top: 255px;
+    right: 318px;
 }
 #finalImageSquarePlatforms {
     position: absolute;
-    right: 525px;
+    right: 372px;
     z-index: 50;
-    top: 735px;
+    top: 545px;
     align-items: center;
     font-size: 13px;
 }
@@ -532,6 +552,13 @@ a.link {
 .socialTab {
     margin: 0 0 0 0;
     padding: 10px 10px 10px 10px;
+    background-color: #FFFFFF;
+}
+.socialTab:active {
+    margin: 0 0 0 0;
+    padding: 10px 10px 10px 10px;
+    background-color: #FFFFFF;
+
 }
 
 #socialSendables {
