- Removed the "contenteditable" attributes within the <p> tags for the output options, no need, they will be used as modules that can be edited in the final if neede.
- changed the seperation borders of the output options to a small grey line, no need for that all-around border.

- added a 'shadow + grow 1% + title="Click to select"' :hover option in the CSS for the output variables, UI looks much cleaner, and gives the user greater confirmation which option they are hovering over.

--- a/main.css
+++ b/main.css
@@ -239,6 +239,19 @@ img {
     transition: .1s;
 }
 
+p[id*="copyToClipboardHas"] {
+    transition: .1s ease-in-out;
+}
+
+p[id*="copyToClipboardHas"]:hover {
+    transition: .1s ease-in-out;
+    scale: 1.01;
+    box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
+    -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
+    -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
+
+}
+
 /* Images produced in the 'New Content' tab */
 #finalImageHorizontal {
     width: 330px;
