--- a/main.css
+++ b/main.css
@@ -194,6 +194,34 @@ img {
     cursor: pointer;
 }
 
+.cleanCursorInput {
+    color: rgba(0, 0, 0, .87);
+    border-bottom-color: rgba(0, 0, 0, .42);
+    font-size: 1rem;
+    font-weight: 400;
+    letter-spacing: .009375em;
+    text-decoration: inherit;
+    text-transform: inherit;
+    align-self: flex-end;
+    box-sizing: border-box;
+    width: 50%;
+    padding: 20px 16px 6px;
+    transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: none;
+    border-bottom: 1px solid;
+    border-radius: 4px 4px 0 0;
+    background: rgb(245, 245, 245);
+    height: 56px;
+}
+.cleanCursorInput:hover{
+    border-bottom-color: rgba(0,0,0,.87);
+    background: #ececec;
+}
+.cleanCursorInput:focus{
+    border-color: #6200ee;
+}
+
+
 /* Columns & Rows */
 .column2 {
     float: left;
@@ -275,46 +303,67 @@ p[id*="copyToClipboardHas"]:hover {
 
 /* Images produced in the 'New Content' tab */
 #finalImageHorizontal {
-    width: 330px;
-    height: 176px;
+    width: 240px;
+    height: 126px;
     border: 2px solid #000000;
     padding: 10px 10px 10px 10px;
     background-color: #fff;
-    z-index: 0;
+    z-index: 99999;
     box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
     position: absolute;
-    top: 80px;
-    right: 85px;
+    top: 190px;
+    right: 420px;
 }
+
+#finalImageHorizontal:hover {
+    scale: 1.03;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+    z-index: 999999;
+}
+
 #finalImageSquare {
-    height: 250px;
-    width: 250px;
+    height: 216px;
+    width: 216px;
     border: 2px solid #000000;
     padding: 10px 10px 10px 10px;
     background-color: #fff;
     z-index: 400;
     position: absolute;
-    top: 290px;
-    right: 225px;
+    top: 120px;
+    right: 218px;
     box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
 }
+#finalImageSquare:hover {
+    scale: 1.03;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+    z-index: 999999;
+}
+
 #finalImageVertical {
-    height: 300px;
-    width: 225px;
+    height: 270px;
+    width: 216px;
     border: 2px solid #000000;
     padding: 10px 10px 10px 10px;
     background-color: #fff;
     position: absolute;
     right: 15px;
-    top: 220px;
+    top: 80px;
     z-index: 50;
     box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
+}
+#finalImageVertical:hover {
+    scale: 1.03;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+    z-index: 999999;
 }
 
 /* Social media platform icons under the images */
