--- a/main.css
+++ b/main.css
@@ -188,30 +188,30 @@ img {
 }
 
 .cleanCursorInput {
-    color: rgba(0, 0, 0, .87);
-    border-bottom-color: rgba(0, 0, 0, .42);
-    font-size: 1rem;
-    font-weight: 400;
-    letter-spacing: .009375em;
-    text-decoration: inherit;
-    text-transform: inherit;
-    align-self: flex-end;
-    box-sizing: border-box;
-    width: 50%;
-    padding: 20px 16px 6px;
-    transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
+    height: 38px;
+    font-weight: bold;
+    margin: 8px 8px 8px 8px;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    transition: .2s ease-in-out;
+    outline: none;
+    padding: 20px 18px 20px 18px;
     border: none;
-    border-bottom: 1px solid;
-    border-radius: 4px 4px 0 0;
-    background: rgb(245, 245, 245);
-    height: 56px;
+    border-radius: 0;
+    background: #f0f0f0;
 }
-.cleanCursorInput:hover{
-    border-bottom-color: rgba(0,0,0,.87);
-    background: #ececec;
+
+.cleanCursorInput:hover {
+    background: #f0f0f0;
+    transition: .2s ease-in-out;
+    scale: 1;
 }
-.cleanCursorInput:focus{
-    border-color: #6200ee;
+
+.cleanCursorInput:focus {
+    background: #f0f0f0;
+    transition: .2s ease-in-out;
+    scale: 1;
 }
 
 
@@ -549,23 +549,49 @@ p[id*="copyToClipboardHas"]:hover {
     display: none;
 }
 
-/* Top Nav Bar */
-#brandSearch {
-    margin: 0 0 0 50px
+.tabby {
+    display: none;
+    position: relative;
+    top: 55px;
 }
-#searchBar {
+
+#navBar {
     position: fixed;
     top: 0;
-    background-color: #f1f1f1;
+    background-color: #ffffff;
+    justify-content: space-between;
     width: 100%;
+    color: #000000;
     margin-left: -12px;
-    padding: 10px 8px 10px 8px;
+    padding: 0 8px 0 8px;
     align-items: center;
     z-index: 1000;
     box-shadow: 5px 10px #888888;
     -webkit-box-shadow: 0 0 15px -9px rgba(0,0,0,0.90);
     -moz-box-shadow: 0 0 15px -9px rgba(0,0,0,0.90);
 }
+
+
+.navTab {
+    color: #000000;
+    transition: .1s ease-in-out;
+
+}
+
+.navTab:hover {
+    background-color: #19395d;
+    transition: .1s ease-in-out;
+    cursor: pointer;
+}
+
+.navTab:active {
+    background-color: #4b2929;
+}
+
+
+
+
+
 
 #logoIcon {
     position: absolute;
