--- a/main.css
+++ b/main.css
@@ -62,6 +62,70 @@ a[title="Clear field"]:hover {
     transition: .2s ease-in-out;
 }
 
+details {
+    padding: 15px 15px 15px 15px;
+    margin: 10px 5px 10px 5px;
+    font-weight: bolder;
+    transition: .2s ease-in-out;
+    box-shadow: 5px 10px #888888;
+    -webkit-box-shadow: 0 0 15px -9px rgba(0,0,0,0.90);
+    -moz-box-shadow: 0 0 15px -9px rgba(0,0,0,0.90);
+}
+
+details:hover {
+    transition: .2s ease-in-out;
+    cursor: pointer;
+}
+
+summary {
+    font-weight: bolder;
+    transition: .2s ease-in-out;
+}
+
+summary:hover {
+    transition: .2s ease-in-out;
+    cursor: pointer;
+}
+
+/* FLEXBOX CLASSES */
+.flex-container {
+    display: flex;
+    height: 400px;
+    background-color: #9d9d9d;
+    justify-content: space-between;
+    align-items: start;
+    flex-wrap: wrap;
+}
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.flex-item {
+    display: flex;
+    background-color: white;
+    color: #000;
+    flex-basis: min-content ;
+    flex-grow: 1;
+    flex-shrink: 1;
+    height: min-content;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+
+    padding: 15px;
+}
+
+
 
 p {
     margin: 0 0 0 0;
