--- a/main.css
+++ b/main.css
@@ -398,6 +398,7 @@ p[id*="copyToClipboardHas"]:hover {
     top: 247px;
     right: 523px;
     transition: .3s ease-in-out;
+    transition: color .0s;
     word-wrap: break-word;
 }
 #finalImageHorizontal:hover {
@@ -421,6 +422,7 @@ p[id*="copyToClipboardHas"]:hover {
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
     transition: .3s ease-in-out;
+    transition: color .0s;
     word-wrap: break-word;
 }
 #finalImageSquare:hover {
@@ -444,7 +446,9 @@ p[id*="copyToClipboardHas"]:hover {
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
     transition: .3s ease-in-out;
+    transition: color .0s;
     word-wrap: break-word;
+
 }
 #finalImageVertical:hover {
     scale: 1.03;
@@ -467,6 +471,7 @@ p[id*="copyToClipboardHas"]:hover {
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
     transition: .3s ease-in-out;
+    transition: color .0s;
     word-wrap: break-word;
 }
 #finalImageStory:hover {
