--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@
 }
 
 /* if the screen width is smaller than 1425, hide everything */
-@media screen and (max-width: 1425px) { body { display: none; } }
+@media screen and (max-width: 1300px) { body { display: none; } }
 
 /* Everything */
 * {
@@ -395,11 +395,12 @@ p[id*="copyToClipboardHas"]:hover {
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
     position: absolute;
-    top: 247px;
-    right: 523px;
+    top: 55px;
+    right: 220px;
     transition: .3s ease-in-out;
     transition: color .0s;
     word-wrap: break-word;
+    background-color: white;
 }
 #finalImageHorizontal:hover {
     scale: 1.03;
