--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@
 
 }
 
-/* if the screen width is smaller than 1425, hide everything */
+/* if the screen width is smaller than 1300, hide everything */
 @media screen and (max-width: 1300px) { body { display: none; } }
 
 /* Everything */
@@ -260,6 +260,12 @@ img {
     cursor: pointer;
 }
 
+.newContentVar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .cleanCursorInput {
     height: 38px;
     font-weight: bold;
@@ -271,7 +277,7 @@ img {
     outline: none;
     padding: 20px 18px 20px 18px;
     border: none;
-    border-radius: 0;
+    border-radius: 0 0 0 0;
     background: #f0f0f0;
 }
 .cleanCursorInput:hover {
@@ -302,88 +308,56 @@ img {
 
 
 /* Columns & Rows */
-.column2 {
-    float: left;
-    width: 50%;
-    padding: 10px;
-}
-.column3 {
-    float: left;
-    width: 33.33%;
-    padding: 10px 10px 10px 10px;
-}
-.column4 {
+.column25PercentWidth {
     float: left;
     width: 25%;
     padding: 10px;
 }
-
-.column30Percent {
+.column30PercentWidth {
     float: left;
     width: 30%;
     padding: 10px;
 }
-.column36Dot6Percent {
+.colum33Point33PercentWidth {
     float: left;
-    width: 36.6%;
+    width: 33.33%;
+    padding: 10px 10px 10px 10px;
+}
+.column35PercentWidth {
+    float: left;
+    width: 35%;
     padding: 10px;
 }
-.column40Percent {
+.column40PercentWidth {
     float: left;
     width: 40%;
     padding: 10px;
 }
-
+.column50PercentWidth {
+    float: left;
+    width: 50%;
+    padding: 10px;
+}
+.column60PercentWidth {
+    float: left;
+    width: 60%;
+    padding: 10px;
+}
+.column65PercentWidth {
+    float: left;
+    width: 65%;
+    padding: 10px;
+}
 .row:after {
     display: table;
     clear: both;
 }
 
-
-
-/* Shortcut 'click link to add brand variable' in the 'New Content' section */
-#linkLocation {
-    transition: .1s;
-}
-#linkLocation:hover {
-    transition: .1s;
-}
-#linkHost {
-    transition: .1s;
-}
-#linkHost:hover {
-    transition: .1s;
-}
-#linkLink {
-    transition: .1s;
-}
-#linkLink:hover {
-    transition: .1s;
-}
-#linkPrimarycolor {
-    transition: .1s;
-}
-#linkPrimarycolor:hover {
-    transition: .1s;
-}
-
-p[id*="copyToClipboardHas"] {
-    transition: .1s ease-in-out;
-}
-
-p[id*="copyToClipboardHas"]:hover {
-    transition: .1s ease-in-out;
-    scale: 1.01;
-    box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
-    -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
-    -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
-
-}
-
 /* Images produced in the 'New Content' tab */
 #finalImageHorizontal {
-    width: 240px;
-    height: 126px;
+    display: none;
+    width: 480px;
+    height: 252px;
     border: 2px solid #000000;
     padding: 10px 10px 10px 10px;
     background-color: #fff;
@@ -391,13 +365,9 @@ p[id*="copyToClipboardHas"]:hover {
     box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
-    position: absolute;
-    top: 55px;
-    right: 220px;
     transition: .3s ease-in-out;
     transition: color .0s;
     word-wrap: break-word;
-    background-color: white;
 }
 #finalImageHorizontal:hover {
     scale: 1.03;
@@ -405,17 +375,30 @@ p[id*="copyToClipboardHas"]:hover {
     cursor: pointer;
     z-index: 999999;
 }
+#finalImageHorizontalDummy {
+    width: 60px;
+    height: 25.2px;
+    border: 1px solid #232323;
+    margin: 3px;
+    transition: all .2s ease-in-out;
+}
+#finalImageHorizontalDummy:hover {
+    cursor: pointer;
+    scale: 1.05;
+    transition: all .2s ease-in-out;
+    box-shadow: 0 0 8px -1px #bebebe;
+    -webkit-box-shadow: 0 0 8px -1px #bebebe;
+    -moz-box-shadow: 0 0 8px -1px #bebebe;
+}
 
 #finalImageSquare {
-    height: 180px;
-    width: 180px;
+    display: none;
+    height: 360px;
+    width: 360px;
     border: 2px solid #000000;
     padding: 10px 10px 10px 10px;
     background-color: #fff;
     z-index: 9999;
-    position: absolute;
-    top: 200px;
-    right: 355px;
     box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
     -moz-box-shadow: 4px 0 11px -2px rgba(47, 47, 47, 0.9);
@@ -429,16 +412,29 @@ p[id*="copyToClipboardHas"]:hover {
     cursor: pointer;
     z-index: 999999;
 }
+#finalImageSquareDummy {
+    height: 36px;
+    width: 36px;
+    border: 1px solid #232323;
+    margin: 3px;
+    transition: all .2s ease-in-out;
+}
+#finalImageSquareDummy:hover {
+    cursor: pointer;
+    scale: 1.05;
+    transition: all .2s ease-in-out;
+    box-shadow: 0 0 8px -1px #bebebe;
+    -webkit-box-shadow: 0 0 8px -1px #bebebe;
+    -moz-box-shadow: 0 0 8px -1px #bebebe;
+}
 
 #finalImageVertical {
-    height: 225px;
-    width: 180px;
+    display: none;
+    height: 450px;
+    width: 360px;
     border: 2px solid #000000;
     padding: 10px 10px 10px 10px;
     background-color: #fff;
-    position: absolute;
-    right: 184px;
-    top: 167px;
     z-index: 999;
     box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
@@ -454,16 +450,29 @@ p[id*="copyToClipboardHas"]:hover {
     cursor: pointer;
     z-index: 999999;
 }
+#finalImageVerticalDummy {
+    height: 45px;
+    width: 36px;
+    border: 1px solid #232323;
+    margin: 3px;
+    transition: all .2s ease-in-out;
+}
+#finalImageVerticalDummy:hover {
+    cursor: pointer;
+    scale: 1.05;
+    transition: all .2s ease-in-out;
+    box-shadow: 0 0 8px -1px #bebebe;
+    -webkit-box-shadow: 0 0 8px -1px #bebebe;
+    -moz-box-shadow: 0 0 8px -1px #bebebe;
+}
 
 #finalImageStory {
-    height: 320px;
-    width: 180px;
+    display: none;
+    height: 640px;
+    width: 360px;
     border: 2px solid #000000;
     padding: 10px 10px 10px 10px;
     background-color: #fff;
-    position: absolute;
-    right: 15px;
-    top: 80px;
     z-index: 50;
     box-shadow: 4px 0 11px -2px rgba(52, 52, 52, 0.9);
     -webkit-box-shadow: 4px 0 11px -2px rgba(75, 75, 75, 0.9);
@@ -477,6 +486,21 @@ p[id*="copyToClipboardHas"]:hover {
     transition: .3s ease-in-out;
     cursor: pointer;
     z-index: 999999;
+}
+#finalImageStoryDummy {
+    height: 64px;
+    width: 36px;
+    border: 1px solid #232323;
+    margin: 3px;
+    transition: all .2s ease-in-out;
+}
+#finalImageStoryDummy:hover {
+    cursor: pointer;
+    scale: 1.05;
+    transition: all .2s ease-in-out;
+    box-shadow: 0 0 8px -1px #bebebe;
+    -webkit-box-shadow: 0 0 8px -1px #bebebe;
+    -moz-box-shadow: 0 0 8px -1px #bebebe;
 }
 
 .socialMediaIcon {
@@ -815,10 +839,7 @@ a.link {
 }
 
 #socialSendables {
-     display: inline-block;
-     position: absolute;
-     top: 800px;
-     right: 20px;
+     display: block;
  }
 .socialTabContent {
      background-color: #ffffff;
